# snouty-viewer

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  im_container.py  main.py  requirements_cpu.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md
src/bk/: affine_transform.py  main.py
src/scripts/: split_positions.py
src/snouty_viewer/: __init__.py  _reader.py  _widget.py  _writer.py  affine_transform.py  im_container.py  im_loader.py  main.py  napari.yaml  requirements_gpu.txt  vol_loader.py
src/snouty_viewer/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
