[metadata]
name = snouty_viewer
version = 0.0.5
description = A plugin to visualize and convert Snouty data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aelefebv/snouty-viewer
author = Austin E. Y. T. Lefebvre
author_email = austin.e.lefebvre@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/aelefebv/snouty-viewer/issues
    Documentation = https://github.com/aelefebv/snouty-viewer#README.md
    Source Code = https://github.com/aelefebv/snouty-viewer
    User Support = https://github.com/aelefebv/snouty-viewer/issues

[options]
packages = find:
install_requires =
    magicgui
    napari
    numpy
    tifffile
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    snouty-viewer = snouty_viewer:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
